crates/neon-cli/src/tui/app/tests/snapshots/neon_hack__tui__app__tests__snapshots__ascii_compact.snap
---
source: crates/neon-cli/src/tui/app/tests/snapshots.rs
expression: compact
---
64x20
 Neon | Notoriete 4/100 (Discret)
ECHO-7: J'ai un premier travail pour toi. Rien de dangereux : un
tour du proprietaire sur ton propre deck. Mais d'abord, les
bases.
Lancer le tutoriel guide ? ECHO-7 passe en revue les premieres
commandes, et `tutorial skip` y met fin a tout moment. [O/n] n
Tutoriel ignore. `tutorial restart` le lance plus tard.
Nouvelle quete : Premiers Pas dans l'Ombre
Taper `help` pour lister les commandes, puis `quests` pour lire
la premiere quete.
> nonsense
[Erreur] Commande inconnue : nonsense. Voir `help`.
> hack localhost
Lancer l'intrusion sur le site localhost ? Elle est resolue
aussitot. [O/n] y
Intrusion sur localhost : 1 fichier pris.
Notoriete +4 (0 -> 4, Discret).
Objectif atteint : Percer le poste local (hack localhost)
>
Tab completer | Haut/Bas historique | PgUp/PgDn defiler | Ctrl+C
