crates/neon-cli/src/tui/app/tests/snapshots/neon_hack__tui__app__tests__snapshots__candidates_listed_under_the_log.snap
---
source: crates/neon-cli/src/tui/app/tests/snapshots.rs
expression: "picture(&app, 64, 20)"
---
64x20
 Neon │ Notoriety 0/100 (Discreet)
[Enter] to continue

Encrypted channel #7: incoming connection.
ECHO-7 » Finally. For the record, I'm not a corp, not a cop and
not a trap. I'm ECHO-7, and yours is the only deck in sector 7
that still answers.
ECHO-7 » Handle on file: Neon. Until you earn another name,
you're a rookie. Don't take it personally.
ECHO-7 » I have a first job for you. Nothing dangerous: a walk
around your own deck. But first, the ropes.
Start the guided tutorial? ECHO-7 walks through the first
commands, and `tutorial skip` ends it at any time. [Y/n] n
Tutorial skipped. `tutorial restart` starts it later.
New quest: First Steps in the Shadows
Type `help` to list the commands, then `quests` to read the
first quest.
status  save
> s
Tab complete | Up/Down history | PgUp/PgDn scroll | Ctrl+C quit
