crates/neon-cli/src/tui/app/tests/snapshots/neon_hack__tui__app__tests__snapshots__long_lines_and_wide_characters.snap
---
source: crates/neon-cli/src/tui/app/tests/snapshots.rs
expression: "picture(&app, 64, 20)"
---
64x20
 霓虹ハッカー │ Notoriety 0/100 (Discreet)
Encrypted channel #7: incoming connection.
ECHO-7 » Finally. For the record, I'm not a corp, not a cop and
not a trap. I'm ECHO-7, and yours is the only deck in sector 7
that still answers.
ECHO-7 » Handle on file: 霓虹ハッカー. Until you earn another
name, you're a rookie. Don't take it personally.
ECHO-7 » I have a first job for you. Nothing dangerous: a walk
around your own deck. But first, the ropes.
Start the guided tutorial? ECHO-7 walks through the first
commands, and `tutorial skip` ends it at any time. [Y/n] n
Tutorial skipped. `tutorial restart` starts it later.
New quest: First Steps in the Shadows
Type `help` to list the commands, then `quests` to read the
first quest.
> ネオン・ハッカー wanders the 日本語 market looking for a very
long stretch of text that has to wrap
[Error] Unknown command: ネオン・ハッカー. See `help`.
語日本語日本語日本語日本語日本語日本語日本語日本語日本語日本語
Tab complete | Up/Down history | PgUp/PgDn scroll | Ctrl+C quit
