crates/neon-cli/src/tui/app/tests/snapshots/neon_hack__tui__app__tests__snapshots__styles_of_the_high_contrast_palette.snap
---
source: crates/neon-cli/src/tui/app/tests/snapshots.rs
expression: "styled(PaletteChoice::HighContrast, true)"
---
64x20
 0   0-63  fg=Rgb(255, 255, 255) bg=Rgb(0, 0, 0) REVERSED
 1   0-41  fg=Rgb(0, 255, 255) bg=Rgb(0, 0, 0) NONE
 1  42-63  fg=Rgb(255, 255, 255) bg=Rgb(0, 0, 0) NONE
 2   0-61  fg=Rgb(0, 255, 255) bg=Rgb(0, 0, 0) NONE
 2  62-63  fg=Rgb(255, 255, 255) bg=Rgb(0, 0, 0) NONE
 3   0-42  fg=Rgb(0, 255, 255) bg=Rgb(0, 0, 0) NONE
 3  43-63  fg=Rgb(255, 255, 255) bg=Rgb(0, 0, 0) NONE
 4   0-56  fg=Rgb(255, 255, 255) bg=Rgb(0, 0, 0) DIM
 4  57-63  fg=Rgb(255, 255, 255) bg=Rgb(0, 0, 0) NONE
 5   0-57  fg=Rgb(255, 255, 255) bg=Rgb(0, 0, 0) DIM
 5  58-63  fg=Rgb(255, 255, 255) bg=Rgb(0, 0, 0) NONE
 6   0-63  fg=Rgb(255, 255, 255) bg=Rgb(0, 0, 0) NONE
 7   0-63  fg=Rgb(255, 255, 255) bg=Rgb(0, 0, 0) NONE
 8   0-63  fg=Rgb(255, 255, 255) bg=Rgb(0, 0, 0) NONE
 9   0-63  fg=Rgb(255, 255, 255) bg=Rgb(0, 0, 0) NONE
10   0-9   fg=Rgb(255, 255, 255) bg=Rgb(0, 0, 0) DIM
10  10-63  fg=Rgb(255, 255, 255) bg=Rgb(0, 0, 0) NONE
11   0-45  fg=Rgb(255, 96, 96) bg=Rgb(0, 0, 0) UNDERLINED
11  46-63  fg=Rgb(255, 255, 255) bg=Rgb(0, 0, 0) NONE
12   0-15  fg=Rgb(255, 255, 255) bg=Rgb(0, 0, 0) DIM
12  16-63  fg=Rgb(255, 255, 255) bg=Rgb(0, 0, 0) NONE
13   0-59  fg=Rgb(255, 255, 255) bg=Rgb(0, 0, 0) DIM
13  60-63  fg=Rgb(255, 255, 255) bg=Rgb(0, 0, 0) NONE
14   0-6   fg=Rgb(255, 255, 255) bg=Rgb(0, 0, 0) DIM
14   7-63  fg=Rgb(255, 255, 255) bg=Rgb(0, 0, 0) NONE
15   0-63  fg=Rgb(255, 255, 255) bg=Rgb(0, 0, 0) NONE
16   0-30  fg=Rgb(255, 255, 0) bg=Rgb(0, 0, 0) NONE
16  31-63  fg=Rgb(255, 255, 255) bg=Rgb(0, 0, 0) NONE
17   0-63  fg=Rgb(255, 255, 255) bg=Rgb(0, 0, 0) NONE
18   0-63  fg=Rgb(255, 255, 255) bg=Rgb(0, 0, 0) NONE
19   0-63  fg=Rgb(255, 255, 255) bg=Rgb(0, 0, 0) DIM
